2024-09-01 [1.42 Bld 275]

- Addition    : P2BIN warns if checksum overwrites data from
                source file(s)
- Bugfix      : uCOM-43: correct behaviour of JCP on last
                address in 64 byte page.

2024-08-25 [1.42 Bld 274]

- Addition    : pre-define variable FLOATMAX
- Addition    : use 80 bit extended float on host platforms
                supporting it

2024-08-05 [1.42 Bld 273]

- Addition    : support NEC uCOM 43/44/45

2024-07-24 [1.42 Bld 272]

- Change      : If the file name given as argument to INCLUDE
                or BINCLUDE does not contain an extension, the
                name extended by .INC and the plain name is
                searched for (in this order).
- Bugfix      : The message "Additional pass not started..."
                is now also added to the summary written
                to the console.
- Change      : Allow MFPT and XOR on T-11 (architecture
                handbook seems to be wrong on this)
- Change      : The DT pseudo instruction stores integer
                arguments in packed BCD format, instead
                of converting integers to floats
- Addition    : support Zilog eZ80

2024-06-26 [1.42 Bld 271]

- Bugfix      : warn about usage of MOV A,ACC on MCS-51
- Bugfix      : disallow odd addresses for CALL #IA on Super8
- Bugfix      : correct operand size of DIVD on 6309
- Bugfix      : correct FMOVE FPcr<->An handling on 68K
- Bugfix      : correct FMOVEM handling of dynamic register
                lists on 68K
- Addition    : add support for register symbols on x86

2024-06-19 [1.42 Bld 270]

- Bugfix      : allow .byte and .word on PDP-11 again.
- Addition    : initial VAX support

2024-04-13 [1.42 Bld 269]

- Addition    : Make per-line header in listing configurable
                via format string

2024-04-03 [1.42 Bld 268]

- Bugfix      : Z80: Do not warn about possible relative jump if
                relative jumping is not allowed for the given
                condition.