@@ -10,7 +10,7 @@
 
 OBJDIR =
 CC = gcc
-CFLAGS = -O2 -fomit-frame-pointer -Wall -Wno-maybe-uninitialized
+CFLAGS = -O2 -fomit-frame-pointer -Wall
 HOST_OBJEXTENSION = .o
 LD = gcc
 LDFLAGS = -lcV
